[package]
name = "procedural_lightning"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Procedural lightning VFX using recursive subdivision algorithm (inspired by LightningGen)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/greysquirr3l/procedural_lightning"
keywords = ["gamedev", "graphics", "vfx", "lightning", "bevy"]
categories = ["game-development", "graphics", "rendering"]

[dependencies]
bevy = "0.17.0"
bevy_hanabi = "0.17.0"
bevy_egui = "0.38.1"
rand = "0.8.5"
rand_chacha = "0.3.1"

[dev-dependencies]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[example]]
name = "demo"
path = "examples/demo.rs"
